2005-04-25  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/MetalBorders.java:
	Added inner class ScrollPaneBorder.
	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): Added default for "ScrollPane.border"
	to use the new ScrollPaneBorder.

2005-04-25  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/AbstractDocument.java:
	Added FIXME comments. This class still has to be
	implemented thread-safe.

2005-04-25  Roman Kennke  <roman@kennke.org>

	* javax/swing/tree/DefaultTreeSelectionModel.java
	(DefaultTreeSelectionModel): Initialize listenerList here.

2005-04-25  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/MetalTextFieldUI.java
	(createUI): Return one instance per Component instead of a
	shared instance.

2005-04-24  Tom Tromey  <tromey@redhat.com>

	* native/jni/Makefile.am (JNIDIRS): New macro.
	(SUBDIRS): Use it.
	* configure.ac (--enable-core-jni): New option.
	* NEWS: Document new option.

2005-04-24  Tom Tromey  <tromey@redhat.com>

	* include/jni_md-x86-linux-gnu.h (JNIIMPORT): New define.
	(jsize): New typedef.
	* include/jni.h: Re-merged with libgcj.
	* doc/vmintegration.texinfo (JNI Implementation): New node.
	* NEWS: Document the change.

2005-04-24  Tom Tromey  <tromey@redhat.com>

	* gnu/classpath/Configuration.java.in (default_awt_peer_toolkit):
	Now set by configure.
	* configure.ac (--enable-default-toolkit): New option.
	* NEWS: Document new option.

2005-04-24  Tom Tromey  <tromey@redhat.com>

	* configure.ac: Formatting fixes.

2005-03-22  Mike Stump  <mrs@apple.com>

	* native/fdlibm/ieeefp.h: ppc64 is also __IEEE_BIG_ENDIAN.

2005-04-23  Tom Tromey  <tromey@redhat.com>

	* javax/swing/text/StyleConstants.java (StyleConstants): Now
	package-private.

2005-04-23  Mark Wielaard  <mark@klomp.org>

	* java/net/URL.java (URL(URL,String,URLStreamHandler)): Add spec
	to MalformedURLException.

2005-04-23  Michael Koch  <konqueror@gmx.de>

	* java/net/ServerSocket.java