@@ -1,5 +1,10 @@
 2005-04-25  Roman Kennke  <roman@kennke.org>
 
+	* javax/swing/text/GapContent.java:
+	Added API comments.
+
+2005-04-25  Roman Kennke  <roman@kennke.org>
+
 	* javax/swing/plaf/metal/MetalBorders.java:
 	Added inner class ScrollPaneBorder.
 	* javax/swing/plaf/metal/MetalLookAndFeel.java
